# beakr-desktop

./: .env.production  .env.sandbox  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: local-file-search.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: benchling.json  default.json  session-connectors.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  file_index.rs  file_watch.rs  lib.rs  main.rs  process_group.rs  search_filter.rs  state.rs  tray.rs  unicode.rs
src-tauri/src/benchling/: bridge.rs  commands.rs  gather_script.rs  mod.rs
src-tauri/src/security/: deny_list.rs  mod.rs  path_validator.rs
src-tauri/src/session/: benchling.rs  bridge.rs  commands.rs  mod.rs  registry.rs
src-tauri/src/session/scripts/: benchling.rs  labarchives.rs  mod.rs
src-tauri/src/tools/: benchling.rs  file_info.rs  list_files.rs  mod.rs  read_file.rs  reveal_file.rs  search_files.rs
src-tauri/src/tools/coding_agent/: binary.rs  claude.rs  codex.rs  mod.rs  readiness.rs  runner.rs
src-tauri/src/ws/: client.rs  inflight.rs  mod.rs  protocol.rs
src/components/: ActiveRunCard.tsx  ActivityFeed.tsx  BeakrLogo.tsx  BenchlingConnect.tsx  CodingAgentSettings.tsx  ConnectionStatus.tsx  FolderPicker.tsx  LoginScreen.tsx  PairingScreen.tsx  SessionConnect.tsx  Settings.tsx  UpdateBanner.tsx
src/hooks/: useActivityFeed.ts  useAuth.ts  useCodingRun.ts  useConnectionStatus.ts  useUpdater.ts
